# logistics-management-system

./: .air.toml  .dockerignore  .env  .env.development  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  biome.json  build.rs  build.ts  bun.lockb  compose.yaml  deno.json  dev.compose.yaml  eslint.config.mjs  go.mod  go.sum  index.html  install.sh  next.config.ts  package-lock.json  package.json  rsbuild.config.ts  rspress.config.ts  sample.pgsql  tailwind.config.ts  tsconfig.json  ui.config.json  vite.config.ts
.cargo/: config.toml
.config/: justfile  tailwind.config.ts
.docker/: compose.yaml  nextjs.dockerfile  postgres.dockerfile  rust.dockerfile
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: pull_request.yaml
.sqlx/: query-2859e9cc4b55149a0edf0c540675c11b867b2cb0b4a32be3e2abea8c0e217f3a.json  query-2f74c6eec3d696058876851a5ec06777dbe685c275783c2b3c98c0bcdeea4de9.json  query-3954c3eb8bc34e1af6640c763002d2f9e92cf515f524ab5a9d2d6223297a0b0b.json  query-5e14b88c2c5412fba8a355d66562448407698028015a89d8a51204662f677695.json  query-79f7a02514e0bc1acfa49d7690a6f6d558d136f9f20dd27180318267f5d0eba8.json  query-7daf9b9cf2f56e5dca89cd0589c5a6bceb3083484bea97fa0f559a7f2f5d5c34.json  query-8f3d88905a9eda605d7f98733d5cd029d6ef68427c88f01483349df029b6e17a.json  query-b17056e10503823ceb28d8eb4505d67e573eb8e97f25177645ced1fc66c4afa7.json  query-daaa746849533781ad0411667ca2f9ea0a41645d20a3b5386276889442dbbc77.json  query-eac92b9f09c418710eb79e7c67c549d577745af3133de80203f7d022a3f8a784.json  query-f42d5f683ac9db6cfcd9e84adcbfa2c07102574dc499fdb42d6bba151deabb4f.json
app/: globals.css  layout.tsx  page.tsx
app/actions/: auth.ts  files.ts
app/hooks/: use-notification.tsx
app/lib/: grpc.ts
app/marketing/: landing.tsx
apps/management-site/: Cargo.toml
apps/management-site/src/: error.rs  forgot_password.rs  login.rs  main.rs
apps/management-site/src/dashboard/: mod.rs
apps/management-site/templates/pages/: forgot-password.html.jinja  login.html.jinja  not-found.html.jinja
apps/management-site/templates/pages/forgot-password/: step-1.html.jinja  step-2.html.jinja  step-3.html.jinja
apps/management-site/templates/partials/: base.html.jinja
apps/management-site/templates/partials/forgot-password/: form.html.jinja
apps/management-site/templates/partials/login/: form.html.jinja
apps/marketing/: Cargo.toml
apps/marketing/src/: landing.rs  main.rs
apps/marketing/templates/pages/: home.html.jinja
apps/marketing/templates/partials/: base.html.jinja
apps/marketing/templates/partials/components/: card.html.jinja  footer.html.jinja  header.html.jinja
apps/marketing/templates/partials/home/: contact.html.jinja  hero.html.jinja  services.html.jinja  testimonials.html.jinja  workflow.html.jinja
cli/: database.ts  dev.ts  env.ts  index.ts
cmd/: backend.rs  frontend.rs  main.go  main.rs  seed.rs  seed.ts
components/: theme-provider.tsx
coverage/: clover.xml  coverage-final.json  index.html
coverage/frontend/: app.tsx.html  entry-client.tsx.html  index.html
crate-proto/: Cargo.toml  build.rs
crate-proto/proto/: auth.proto
crate-proto/src/: auth.rs  lib.rs  storage.rs
crates/api-auth/: Cargo.toml
crates/api-human-resource/: Cargo.toml
crates/api-human-resource/src/: employee.rs  lib.rs  task.rs
crates/lib-core/: Cargo.toml
crates/lib-core/src/: database.rs  docs.rs  error.rs  lib.rs  streaming.rs  test.rs
crates/lib-core/templates/: alert-error.html.jinja  alert.html.jinja  base.html.jinja  error.html.jinja  full-page-error.html.jinja
crates/service-authentication/: Cargo.toml
crates/service-authentication/src/: lib.rs
crates/service-human-resource/: Cargo.toml
crates/service-human-resource/src/: employee.rs  lib.rs
crates/service-storage/: Cargo.toml
crates/service-storage/src/: lib.rs
docs/: .user.md.swp  auth.md  user.md  user.md.save
extensions/frontend-authentication/: Cargo.toml
extensions/frontend-authentication/src/: lib.rs  login.rs
extensions/frontend-authentication/templates/: base.html.jinja2  login.html  login.html.jinja2
frontend/: fresh.gen.ts
migration/: Cargo.toml
migration/src/: lib.rs  m20241228_193306_user.rs  m20250105_194415_file.rs  m20250105_200657_employee.rs  m20250105_204255_task.rs  main.rs
migrations/: 20250115113542_user.down.sql  20250115113542_user.up.sql  20250115113545_file.down.sql  20250115113545_file.up.sql  20250115113609_employee.down.sql  20250115113609_employee.up.sql  20250115113613_department.down.sql  20250115113613_department.up.sql  20250115113622_task.down.sql  20250115113622_task.up.sql  20250124170507_auth_schema.down.sql  20250124170507_auth_schema.up.sql  20250124170529_auth_table.down.sql  20250124170529_auth_table.up.sql  20250124170625_auth_trigger.down.sql  20250124170625_auth_trigger.up.sql  20250124170823_auth_views.down.sql  20250124170823_auth_views.up.sql  20250124175505_auth_pgjwt.down.sql  20250124175505_auth_pgjwt.up.sql  20250124180033_auth_function.down.sql  20250124180033_auth_function.up.sql  20250131080530_storage_schema.down.sql  20250131080530_storage_schema.up.sql  20250131080615_storage_table.down.sql  20250131080615_storage_table.up.sql  20250131080806_storage_views.down.sql  20250131080806_storage_views.up.sql  20250131083313_storage_trigger.down.sql  20250131083313_storage_trigger.up.sql  20250209093338_auth_policies.down.sql  20250209093338_auth_policies.up.sql  20250209093552_storage_policies.down.sql  20250209093552_storage_policies.up.sql  20250214133647_management_schema.down.sql  20250214133647_management_schema.up.sql  20250214133816_management_employee_table.down.sql  20250214133816_management_employee_table.up.sql  20250214134921_management_employee_trigger.down.sql  20250214134921_management_employee_trigger.up.sql  (+20 more)
proto/: auth.proto  employee_management.proto  file_management.proto  health_check.proto  storage.proto  user.proto
services/authentication/: Cargo.toml
services/authentication/src/: lib.rs
services/storage/: Cargo.toml
services/storage/src/: lib.rs
src/: cli.rs  main.rs  utils.rs
tmp/: main
(+347 files in other folders)
