[package]
name = "logistics-management-system"
version = "0.6.1"
edition = "2021"
authors = [
  "Karl Robeck Alferez <karlalferezfx@gmail.com>",
  "Mhell Francis Bergonio <bergonio.mhell101001@gmail.com>",
]

[[bin]]
name = "backend"
path = "cmd/backend.rs"

[workspace]
members = [
  "crates/lib-proto",
  "crates/service-human-resource",
  "crates/service-authentication",
  "crates/service-storage",
  "crates/lib-core",
  "crates/lib-entity",
  "crates/lib-security",
  "apps/marketing",
  "apps/management-site",
]


[workspace.dependencies]

# Core crates
lib-core = { path = "crates/lib-core" }
lib-entity = { path = "crates/lib-entity" }
lib-proto = { path = "crates/lib-proto" }
lib-security = { path = "crates/lib-security" }

# Service crates
service-authentication = { path = "crates/service-authentication" }
service-human-resource = { path = "crates/service-human-resource" }
service-storage = { path = "crates/service-storage" }

# Grpc
prost = "0.13.4"
tonic = { version = "0.12.3", features = ["router"] }

# Serializer / Deserializer
serde = { version = "1.0.215", features = ["derive"] }

# Jwt
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.8"

# Database
sqlx = { version = "0.8.2", features = [
  "runtime-tokio",
  "tls-native-tls",
  "postgres",
  "derive",
  "macros",
  "migrate",
  "uuid",
  "chrono",
  "json",
] }
sea-query = { version = "0.32.2", features = [
  "thread-safe",
  "backend-postgres",
  "postgres-array",
  "with-uuid",
] }
sea-query-binder = { version = "0.7.0", features = [
  "sqlx-postgres",
  "postgres-array",
  "with-uuid",
] }
sea-orm = { version = "1.1.6", features = ["sqlx-postgres", "runtime-tokio"] }

# Async Runtime
tokio = { version = "1.41.1", features = ["full"] }
tokio-stream = "0.1.17"
futures = "0.3.31"
tokio-util = "0.7.13"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
test-log = "0.2.16"
tracing-test = "0.2.5"

# Http
tower = "0.5.2"
axum = "0.7.9"
tower-http = { version = "0.6.2", features = [
  "catch-panic",
  "compression-gzip",
  "cors",
  "decompression-gzip",
  "fs",
  "limit",
  "request-id",
  "sensitive-headers",
  "timeout",
  "trace",
] }
axum-extra = { version = "0.9.0", features = ["cookie"] }
hyper-util = "0.1.10"

# Templating
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"

# Validation
garde = { version = "0.20.0", features = ["derive", "serde", "email"] }

# Environment variables
dotenv = "0.15.0"

# Utilities
uuid = { version = "1.15.1", features = ["v4"] }

# Embedded
rust-embed = "8.6.0"
include_dir = "0.7.4"
tower-serve-static = "0.1.1"

[dependencies]
service-storage = { path = "./crates/service-storage" }
service-authentication = { path = "./crates/service-authentication" }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
dotenv = { workspace = true }
axum = { workspace = true }
sea-orm = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
