[package]
name = "logistics-management-system"
version = "0.6.1"
edition = "2021"
authors = [
  "Karl Robeck Alferez <karlalferezfx@gmail.com>",
  "Mhell Francis Bergonio <bergonio.mhell101001@gmail.com>",
]

[workspace]
members = [
  "crates/lib-core",
  "crates/lib-entity",
  "crates/lib-security",
  "crates/api-file",
  "crates/api-auth",
  "crates/api-human-resource",
  "crates/api-inventory",
  "crates/api-chat",
  "crates/api-sales",
  "crates/api-mail",
  "crates/api-notification",
  "crates/api-monitoring",
  "crates/api-reports",
  "crates/api-qr",
]


[workspace.dependencies]

# Core crates
lib-core = { path = "crates/lib-core" }
lib-entity = { path = "crates/lib-entity" }
lib-security = { path = "crates/lib-security" }

# Service crates
api-auth = { path = "crates/api-auth" }
api-file = { path = "crates/api-file" }
api-human-resource = { path = "crates/api-human-resource" }
api-inventory = { path = "crates/api-inventory" }
api-chat = { path = "crates/api-chat" }
api-sales = { path = "crates/api-sales" }

# Serializer / Deserializer
serde = { version = "1.0.215", features = ["derive"] }

# Jwt
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.8"

# Database
sqlx = { version = "0.8.2", features = [
  "runtime-tokio",
  "tls-native-tls",
  "postgres",
  "derive",
  "macros",
  "migrate",
  "uuid",
  "chrono",
  "json",
] }
sea-orm = { version = "1.1.6", features = ["sqlx-postgres", "runtime-tokio"] }

# Async Runtime
tokio = { version = "1.41.1", features = ["full"] }
tokio-stream = "0.1.17"
futures = "0.3.31"
tokio-util = "0.7.13"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
test-log = "0.2.16"
tracing-test = "0.2.5"

# Http
tower = "0.5.2"
axum = { version = "0.8.1", features = ["macros"] }
tower-http = { version = "0.6.2", features = [
  "catch-panic",
  "compression-gzip",
  "cors",
  "decompression-gzip",
  "fs",
  "limit",
  "request-id",
  "sensitive-headers",
  "timeout",
  "trace",
] }
axum-extra = { version = "0.9.0", features = ["cookie", "form"] }
hyper-util = "0.1.10"

# Templating
rinja = { version = "0.3.5", features = ["with-axum"] }
rinja_axum = "0.3.5"

# Validation
garde = { version = "0.20.0", features = ["derive", "serde", "email"] }

# Environment variables
dotenv = "0.15.0"

# Utilities
uuid = { version = "1.15.1", features = ["v4"] }

# Embedded
rust-embed = "8.6.0"
include_dir = "0.7.4"
tower-serve-static = "0.1.1"

# OpenAPI
utoipa = { version = "5.3.1", features = ["axum_extras", "uuid", "chrono"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
utoipa-axum = "0.2.0"

[dependencies]
api-auth = { workspace = true }
api-human-resource = { workspace = true }
api-inventory = { workspace = true }
api-file = { workspace = true }
api-chat = { workspace = true }
api-sales = { workspace = true }

tracing-subscriber = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
dotenv = { workspace = true }
axum = { workspace = true }
sea-orm = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
utoipa-scalar = { workspace = true }
utoipa-axum = { workspace = true }
lib-core = { workspace = true }
utoipa = { workspace = true }
