[package]
name = "management-site"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm = { workspace = true }
lib-entity = { workspace = true }
lib-core = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
garde = { workspace = true }
serde = { workspace = true }
include_dir = { workspace = true }
tower-serve-static = { workspace = true }
rinja = { workspace = true }
rinja_axum = { workspace = true }
axum-extra = { workspace = true }
