[package]
name = "marketing"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
askama = { workspace = true }
askama_axum = { workspace = true }
include_dir = { workspace = true }
tower-serve-static = { workspace = true }
