[package]
name = "lib-core"
version = "0.2.0"
edition = "2024"

[dependencies]
derive_more = { version = "2.0.1", features = ["from"] }
tonic = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
sea-query = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
