[package]
name = "service-authentication"
version = "0.1.0"
edition = "2021"

[dependencies]
lib-proto = { path = "../../crates/lib-proto" }
lib-utils = { path = "../../crates/lib-utils" }
sqlx = { workspace = true }
serde = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
test-log = { workspace = true }
