[package]
name = "service-human-resource"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { workspace = true }
tonic = { workspace = true }
tokio-stream = { workspace = true }
lib-proto = { path = "../../crates/lib-proto" }
lib-core = { path = "../../crates/lib-core" }
sea-query = { workspace = true }
sea-query-binder = { workspace = true }
