[package]
name = "service-human-resource"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
lib-proto = { workspace = true }
lib-core = { workspace = true }
lib-entity = { workspace = true }
lib-security = { workspace = true }
sea-orm = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
