[package]
name = "service-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tokio-stream = { workspace = true }
lib-proto = { path = "../../crates/lib-proto" }
lib-utils = { path = "../../crates/lib-utils" }
lib-core = { path = "../../crates/lib-core" }
sea-query = { workspace = true }
sea-query-binder = { workspace = true }
service-authentication = { path = "../service-authentication" }
futures = { workspace = true }
tempdir = "0.3.7"
uuid = { workspace = true }
tracing = { workspace = true }
