[package]
name = "service-storage"
version = "0.3.0"
edition = "2021"

[dependencies]
sqlx = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tokio-stream = { workspace = true }
lib-proto = { path = "../../crates/lib-proto" }
lib-core = { path = "../../crates/lib-core" }
lib-entity = { path = "../../crates/lib-entity" }
lib-security = { path = "../../crates/lib-security" }
sea-orm = { workspace = true }
service-authentication = { path = "../service-authentication" }
futures = { workspace = true }
tempdir = "0.3.7"
tracing = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
