[package]
name = "frontend-authentication"
version = "0.1.0"
edition = "2024"
authors = ["Karl Robeck Alferez <karlalferezfx@gmail.com>"]

[dependencies]
axum = { workspace = true }
askama = { workspace = true }
askama_axum = { workspace = true }
service-authentication = { path = "../../services/authentication" }
tracing = { workspace = true }
garde = { workspace = true }
serde = { workspace = true }
crate-proto = { path = "../../crate-proto" }
tonic = { workspace = true }
base = { path = "../base" }
axum-extra = { workspace = true }
