[package]
name = "service-authentication"
version = "0.1.0"
edition = "2021"

[dependencies]
crate-proto = { path = "../../crates/crate-proto" }
crate-utils = { path = "../../crates/crate-utils" }
sqlx = { workspace = true }
serde = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
test-log = { workspace = true }
