[package]
name = "service-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tokio-stream = { workspace = true }
crate-proto = { path = "../../crates/crate-proto" }
crate-utils = { path = "../../crates/crate-utils" }
service-authentication = { path = "../authentication" }
futures = { workspace = true }
tempdir = "0.3.7"
uuid = { workspace = true }
tracing = { workspace = true }
